--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite": "^5.4.1"
   },
   "dependencies": {
-    "@arcgis/core": "^4.30.9"
+    "@arcgis/core": "^4.30.9",
+    "cesium": "^1.121.1"
   }
 }
